--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,13 @@ ul {
     gap: 1rem;
 }
 
-.flexR {
+.flexr {
     display: flex;
     flex-direction: row;
     gap: 1rem;
 }
 
-.flexC {
+.flexc {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -53,7 +53,7 @@ li {
 }
 
 #logo {
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
@@ -78,7 +78,7 @@ section {
 }
 
 section h1 {
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -87,7 +87,7 @@ section h1 {
 }
 
 section p {
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -96,18 +96,18 @@ section p {
 }
 
 section h3 {
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
 }
 
-div .flexR {
+div .flexr {
     gap: 2rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .container {
         padding: 0 1rem;
     }
@@ -127,6 +127,6 @@ div .flexR {
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (width >= 768px) {
     background-image: url("/images/Header bg.svg");
 }
