--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,31 @@ section h3 {
     font-size: 16px;
     line-height: 24px;
 }
+
+div .flexr {
+    gap: 2rem;
+}
+
+@media screen and (width <=768px) {
+    .container {
+        padding: 0 1rem;
+    }
+
+    #menu {
+        display: block;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    ul {
+        display: none;
+    }
+
+    section {
+        margin: auto 0;
+    }
+}
+
+@media screen and (width >=768px) {
+    background-image: url("/images/Header bg.svg");
+}
