--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,162 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
+html,
 body {
-  background: "#e5e5e5";
-}
-
-.container {
-  padding: 0 1rem;
-}
-
-nav {
-  justify-content: space-between;
-  height: 72px;
-  background-color: #ffff;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
   width: 100%;
+  overflow-x: hidden;
 }
 
-#menu {
-  display: block;
-  margin-top: auto;
-  margin-bottom: auto;
+.navbar {
+  background-color: white;
 }
 
-ul {
+.navbar-content {
   display: flex;
-  flex-direction: row;
-  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 40px;
+  border: none;
 }
 
-.flexr {
+.navbar-content img {
+  width: 20px;
+  height: 13px;
+}
+
+.logo {
+  color: #6070ff;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.nav_link ul {
+  display: none;
+}
+
+.section-1 {
+  height: 720px;
+  background-color: #f7f7f9;
+  border-style: none;
+}
+
+.section-1-container {
+  background-image: url("images/header-shapes\ mobile.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-bottom-left-radius: 100px;
+  background-color: white;
+  padding: 160px 25px;
+  width: 100%;
+  height: 100%;
+}
+
+.heading {
+  font-size: 2.5em;
+  font-weight: 700;
+  line-height: 52px;
+}
+
+.leading {
+  font-size: 18px;
+  text-align: start;
+  margin: 20px 0;
+}
+
+.social-heading {
+  color: #6070ff;
+  margin-bottom: 8px;
+}
+
+.socials {
   display: flex;
-  flex-direction: row;
-  gap: 1rem;
-}
-
-.flexc {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-li {
   list-style: none;
 }
 
-.link {
-  text-decoration: none;
-  color: #6070ff;
-  font-size: 1.5rem;
-  font-weight: 600;
+.socials img {
+  padding-right: 15px;
 }
 
-#logo {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 20px;
-  margin: auto 0;
+.section-2 {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f7f9;
+  padding-bottom: 100px;
 }
 
-#header {
-  background-image: url("/images/header-background-mobile.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: fit-content;
-  height: calc(100vh - 72px);
-  border-bottom: 2px solid #edebeb;
-  border-radius: 0 0 0 100px;
-  background-color: #ffff;
-}
-
-.mt {
-  margin-top: auto;
-}
-
-section {
-  margin: auto;
+.container-1 img {
+  padding: 20px 20px;
   width: 100%;
 }
 
-section h1 {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 52px;
-  color: #172b4d;
+.container-1 {
+  background-color: white;
+  margin-left: 1.2em;
+  margin-right: 1.2em;
+  justify-self: center;
+  margin-top: 100px;
+  border-radius: 20px;
+  border: 1px solid #dfe1e6;
+  padding-bottom: 20px;
 }
 
-section p {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #344563;
-}
+@media only screen and (min-width: 768px) {
+  .section-1-container {
+    background-image: url("images/Header\ bg.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
+    padding: 0 14em;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    text-align: start;
+  }
 
-section h3 {
-  font-family: Poppins, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-}
+  .navbar-content img {
+    display: none;
+  }
 
-div .flexr {
-  gap: 2rem;
-}
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-.section2 {
-  margin-bottom: auto;
+  .nav_link {
+    display: block;
+  }
+
+  .btn {
+    margin-right: -9px;
+  }
+
+  .nav_link ul {
+    display: flex;
+    list-style: none;
+    margin-top: 50px;
+    margin-right: 50px;
+  }
+
+  .nav_link ul a {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    font-size: 15px;
+  }
+
+  .section-2 {
+    display: none;
+  }
+
 }
