--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,151 @@ body {
   padding-bottom: 20px;
 }
 
+.items ul {
+  display: flex;
+  font-size: 12px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.items {
+  padding-left: 20px;
+  margin-right: 50px;
+}
+
+.items h1 {
+  font-size: 2em;
+}
+
+.items p {
+  font-size: 16px;
+  text-align: start;
+  margin-right: 25px;
+  margin-bottom: 10px;
+}
+
+.items ul li {
+  padding-right: 5px;
+  font-weight: 700;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.items ul li:nth-child(1) {
+  list-style: none;
+  margin-right: 10px;
+  font-weight: 500;
+}
+
+.items ul li:nth-child(2) {
+  color: #7a869a;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 400;
+}
+
+.items ul li:nth-child(3) {
+  color: #7a869a;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 400;
+}
+
+.btn {
+  border: none;
+  padding: 4px 12px;
+  color: #6070ff;
+  text-decoration: none;
+  background-color: #ebebff;
+  border-radius: 10px;
+  margin-right: -20px;
+  font-weight: 500;
+}
+
+.btn-div {
+  margin: 15px 0;
+  list-style: none;
+  font-size: 12px;
+  display: flex;
+  flex-direction: row;
+}
+
+.last-btn {
+  border: 1px solid #6070ff;
+  padding: 10px 18px;
+  border-radius: 10px;
+  margin-top: 8px;
+  background-color: white;
+  color: #6070ff;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.section-3 {
+  background-color: #f7f7f9;
+}
+
+.container-3 {
+  background-color: white;
+  border-top-right-radius: 100px;
+  padding-left: 30px;
+  padding-top: 100px;
+  padding-right: 20px;
+  margin-bottom: 195px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.about {
+  font-size: 2.4em;
+  padding-bottom: 10px;
+}
+
+.about-div p {
+  padding-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 16px;
+}
+
+.m-b {
+  margin-top: 20px;
+}
+
+.framework {
+  border-bottom: 1.5px solid #dfe1e6;
+  padding: 25px 0;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 60px;
+}
+
+.skills {
+  background-color: #f7f7f9;
+  margin-top: 20px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  border-radius: 10px;
+  margin-right: 20px;
+  display: flex;
+}
+
+.m-l {
+  margin-left: 20px;
+}
+
+.language {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 60px;
+}
+
+.section-2-desktop {
+  display: none;
+}
+
 @media only screen and (min-width: 768px) {
   .section-1-container {
     background-image: url("images/Header\ bg.png");
@@ -159,4 +304,75 @@ body {
     display: none;
   }
 
+  .section-2-desktop {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+    background-color: #f7f7f9;
+    padding-bottom: 100px;
+    padding-top: 50px;
+  }
+
+  .container-1 img {
+    width: 100%;
+    height: 100%;
+    margin-top: 18px;
+    margin-left: 10px;
+  }
+
+  .container-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 24px;
+  }
+
+  .ruby {
+    padding: 4px 20px;
+    margin-right: -1px;
+  }
+
+  .items {
+    margin-bottom: 50px;
+  }
+
+  .items ul {
+    margin-bottom: 35px;
+    margin-top: 20px;
+    font-size: 18px;
+  }
+
+  .items p {
+    margin-top: -20px;
+  }
+
+  .container-3 {
+    display: grid;
+    grid-template-columns: 1.4fr 2fr;
+  }
+
+  .about-div {
+    padding-left: 50px;
+  }
+
+  .languages {
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 100px;
+  }
+
+  .wrapper {
+    display: flex;
+  }
+
+  .skills {
+    display: flex;
+    flex-direction: column;
+    width: 122px;
+    align-items: flex-start;
+    text-align: start;
+  }
 }
