--- a/styles.css
+++ b/styles.css
@@ -123,13 +123,24 @@ body {
 
 .items h1 {
   font-size: 2em;
+  color: #172B4D;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
 }
 
 .items p {
-  font-size: 16px;
   text-align: start;
   margin-right: 25px;
   margin-bottom: 10px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
 }
 
 .items ul li {
@@ -185,8 +196,19 @@ body {
   margin-top: 8px;
   background-color: white;
   color: #6070ff;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 17px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.last-btn:hover {
+  background-color: #6070FF;
+  color: #fff;
+}
+
+.last-btn:active {
+  background-color: #2230D2;
+  color: white;
 }
 
 .section-3 {
@@ -208,6 +230,7 @@ body {
 .about {
   font-size: 2.4em;
   padding-bottom: 10px;
+  color: #172B4D
 }
 
 .about-div p {
@@ -216,6 +239,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   font-size: 16px;
+  color: #344563;
 }
 
 .m-b {
@@ -333,12 +357,18 @@ body {
   }
 
   .container-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-left: 100px;
     margin-right: 100px;
     border-radius: 24px;
+  }
+
+  .container-1>* {
+    flex-basis: calc(50% - 20px);
   }
 
   .ruby {
@@ -385,5 +415,17 @@ body {
     width: 122px;
     align-items: flex-start;
     text-align: start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-1 {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container-1>* {
+    flex-basis: calc(33.33% - 20px);
   }
 }
