--- a/styles.css
+++ b/styles.css
@@ -428,3 +428,70 @@ body {
     flex-basis: calc(33.33% - 20px);
   }
 }
+
+
+/* Footer section */
+
+footer {
+  background-color: #6070ff;
+  background-image: url(./images/footer.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 100px 0px 0px 0px;
+  padding: 4rem 1rem;
+  gap: 3rem;
+  margin-top: 1rem;
+}
+
+.footercontainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footercontainer h3 {
+  font-size: 40px;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+}
+
+.footercontainer p {
+  font-size: 20px;
+  font-weight: 400;
+  color: #ebebff;
+  text-align: center;
+}
+
+.form ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form input, textarea {
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 1rem;
+  width: 25em;
+  color: #b3bac5;
+}
+
+.footer-btn {
+  background: #fff;
+  border-radius: 8px;
+  width: 142px;
+  height: 48px;
+  text-align: center;
+  paddding: 12px 16px;
+  color: #6070ff;
+  font-size: 17px;
+  font-weight: 500;
+  text-align: center;
+  border: none;
+}
