--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ body {
     border-radius: 24px;
   }
 
-  .container-1 > * {
+  .container-1>* {
     flex-basis: calc(50% - 20px);
   }
 
@@ -424,7 +424,7 @@ body {
     margin-right: auto;
   }
 
-  .container-1 > * {
+  .container-1>* {
     flex-basis: calc(33.33% - 20px);
   }
 }
@@ -474,7 +474,8 @@ footer {
   gap: 1rem;
 }
 
-.form input, textarea {
+.form input,
+textarea {
   border: 1px solid #cfd8dc;
   border-radius: 8px;
   padding: 1rem;
@@ -488,10 +489,16 @@ footer {
   width: 142px;
   height: 48px;
   text-align: center;
-  paddding: 12px 16px;
+  padding: 12px 16px;
   color: #6070ff;
   font-size: 17px;
   font-weight: 500;
   text-align: center;
   border: none;
+  cursor: pointer;
+}
+
+.footer-btn:active {
+  background-color: #2230D2;
+  color: #fff
 }
