--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ body {
     border-radius: 24px;
   }
 
-  .container-1>* {
+  .container-1 > * {
     flex-basis: calc(50% - 20px);
   }
 
@@ -424,13 +424,10 @@ body {
     margin-right: auto;
   }
 
-  .container-1>* {
+  .container-1 > * {
     flex-basis: calc(33.33% - 20px);
   }
 }
-
-
-/* Footer section */
 
 footer {
   background-color: #6070ff;
@@ -441,7 +438,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 100px 0px 0px 0px;
+  border-radius: 100px 0 0 0;
   padding: 4rem 1rem;
   gap: 3rem;
   margin-top: 1rem;
@@ -493,12 +490,11 @@ textarea {
   color: #6070ff;
   font-size: 17px;
   font-weight: 500;
-  text-align: center;
   border: none;
   cursor: pointer;
 }
 
 .footer-btn:active {
-  background-color: #2230D2;
-  color: #fff
+  background-color: #2230d2;
+  color: #fff;
 }
