--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,9 @@ body {
   background-image: url("images/header-shapes\ mobile.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   border-bottom-left-radius: 100px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   padding: 160px 25px;
   width: 100%;
   height: 100%;
@@ -171,12 +172,13 @@ body {
 
 .btn {
   border: none;
-  padding: 4px 12px;
+  text-transform: lowercase;
+  padding: 5px 10px;
   color: #6070ff;
   text-decoration: none;
   background-color: #ebebff;
   border-radius: 10px;
-  margin-right: -20px;
+  font-size: 12px;
   font-weight: 500;
 }
 
@@ -292,7 +294,7 @@ body {
   .section-1-container {
     background-image: url("images/Header\ bg.png");
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     padding: 0 14em;
@@ -344,15 +346,12 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #f7f7f9;
-    padding-bottom: 100px;
-    padding-top: 50px;
+    padding-bottom: 5%;
   }
 
   .container-1 img {
     width: 100%;
     height: 100%;
-    margin-top: 18px;
-    margin-left: 10px;
   }
 
   .container-1 {
@@ -360,9 +359,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
+    gap: 2%;
+    padding: 1rem 0;
     border-radius: 24px;
   }
 
@@ -376,17 +374,21 @@ body {
   }
 
   .items {
-    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: max-content;
   }
 
   .items ul {
-    margin-bottom: 35px;
-    margin-top: 20px;
+    width: max-content;
     font-size: 18px;
+    color: #6b778c;
   }
 
   .items p {
-    margin-top: -20px;
+    /* margin-top: -20px; */
+    font-size: 16px;
   }
 
   .container-3 {
@@ -415,6 +417,10 @@ body {
     align-items: flex-start;
     text-align: start;
   }
+
+  .last-btn {
+    width: 7rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -425,7 +431,13 @@ body {
   }
 
   .container-1 > * {
-    flex-basis: calc(33.33% - 20px);
+    flex-basis: calc(33.333% - 20px);
+  }
+
+  .footer-btn {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -448,6 +460,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-width: 600px;
 }
 
 .footercontainer h3 {
