--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,20 @@ body {
   height: 720px;
   background-color: #f7f7f9;
   border-style: none;
+  animation: scale-in 0.5s ease-out;
+  transform-origin: center;
+  opacity: 1;
+}
+
+@keyframes scale-in {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .section-1-container {
@@ -358,9 +372,11 @@ body {
     gap: 2%;
     padding: 1rem 0;
     border-radius: 24px;
+    transform: scale(1);
+  transition: transform 0.5s ease-out;
   }
 
-  .container-1 > * {
+  .container-1>* {
     flex-basis: calc(50% - 20px);
   }
 
@@ -424,9 +440,11 @@ body {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
+    transform: scale(1);
+  transition: transform 0.5s ease-out;
   }
 
-  .container-1 > * {
+  .container-1>* {
     flex-basis: calc(33.333% - 20px);
   }
 
@@ -507,3 +525,9 @@ textarea {
   background-color: #2230d2;
   color: #fff;
 }
+
+.container-1:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s ease-out;
+}
+
